syntax = "proto3";

package project.planton.provider.kubernetes.keycloakkubernetes.v1;

import "project/planton/credential/kubernetesclustercredential/v1/spec.proto";
import "project/planton/provider/kubernetes/keycloakkubernetes/v1/api.proto";
import "project/planton/shared/pulumi/pulumi.proto";
import "project/planton/shared/shared.proto";
import "project/planton/shared/terraform/terraform.proto";

//keycloak-kubernetes stack-input
message KeycloakKubernetesStackInput {
  //iac-provisioner
  project.planton.shared.IacProvisioner iac_provisioner = 1;
  //pulumi input required when the iac_provisioner is pulumi
  project.planton.shared.pulumi.PulumiStackInfo pulumi = 2;
  //terraform input required when the iac_provisioner is terraform
  project.planton.shared.terraform.TerraformStackInfo terraform = 3;
  //target api-resource
  KeycloakKubernetes target = 4;
  //kubernetes-cluster-credential
  project.planton.credential.kubernetesclustercredential.v1.KubernetesClusterCredentialSpec kubernetes_cluster = 5;
}
